// $Id$

Transliteration 6.x-2.x, xxxx-xx-xx
-----------------------------------



Transliteration 6.x-2.0, 2008-06-12
-----------------------------------
#255646 by smk-ka: Added a language parameter to transliteration_get().
#246875 by smk-ka: Added language-specific replacements for Danish letters.
#253916 by Freso: Fixed typo in .info file.


Transliteration 6.x-1.0, 2008-03-20
-----------------------------------
#199660 by smk-ka: Added retroactive transliteration of existing filenames
  during installation or update. Original idea by colan.


Transliteration 5.x-1.0, 2007-12-09
-----------------------------------
Initial release.
