@@ -11,6 +11,7 @@
  * @param string $langcode
  *   Optional ISO 639 language code used to import language specific
  *   replacements. Defaults to the current display language.
+ *
  * @return string
  *   Cleaned file name.
  */
@@ -39,6 +40,7 @@ function transliteration_clean_filename($filename, $langcode = NULL) {
  * @param string $langcode
  *   Optional ISO 639 language code used to import language specific
  *   replacements. Defaults to the current display language.
+ *
  * @return string
  *   Plain ASCII output.
  * @see transliteration_get()
@@ -63,17 +65,23 @@ function transliteration_process($string, $unknown = '?', $langcode = NULL) {
     for ($n = 0; $n < 256; $n++) {
       if ($n < 0xc0) {
         $remaining = 0;
-      } elseif ($n < 0xe0) {
+      }
+      elseif ($n < 0xe0) {
         $remaining = 1;
-      } elseif ($n < 0xf0) {
+      }
+      elseif ($n < 0xf0) {
         $remaining = 2;
-      } elseif ($n < 0xf8) {
+      }
+      elseif ($n < 0xf8) {
         $remaining = 3;
-      } elseif ($n < 0xfc) {
+      }
+      elseif ($n < 0xfc) {
         $remaining = 4;
-      } elseif ($n < 0xfe) {
+      }
+      elseif ($n < 0xfe) {
         $remaining = 5;
-      } else {
+      }
+      else {
         $remaining = 0;
       }
       $tailBytes[chr($n)] = $remaining;
@@ -87,7 +95,7 @@ function transliteration_process($string, $unknown = '?', $langcode = NULL) {
   preg_match_all('/[\x00-\x7f]+|[\x80-\xff][\x00-\x40\x5b-\x5f\x7b-\xff]*/', $string, $matches);
 
   $result = '';
-  foreach($matches[0] as $str) {
+  foreach ($matches[0] as $str) {
     if ($str{0} < "\x80") {
       // ASCII chunk: guaranteed to be valid UTF-8
       // and in normal form C, so skip over it.
@@ -104,9 +112,10 @@ function transliteration_process($string, $unknown = '?', $langcode = NULL) {
 
     $head = '';
     $chunk = strlen($str);
-    $len = $chunk + 1; // Counting down is faster. I'm *so* sorry.
+    // Counting down is faster. I'm *so* sorry.
+    $len = $chunk + 1;
 
-    for ($i = -1; --$len;) {
+    for ($i = -1; --$len; ) {
       $c = $str{++$i};
       if ($remaining = $tailBytes[$c]) {
         // UTF-8 head byte!
@@ -116,14 +125,16 @@ function transliteration_process($string, $unknown = '?', $langcode = NULL) {
           if (--$len && ($c = $str{++$i}) >= "\x80" && $c < "\xc0") {
             // Legal tail bytes are nice.
             $sequence .= $c;
-          } else {
+          }
+          else {
             if ($len == 0) {
               // Premature end of string!
               // Drop a replacement character into output to
               // represent the invalid UTF-8 sequence.
               $result .= $unknown;
               break 2;
-            } else {
+            }
+            else {
               // Illegal tail byte; abandon the sequence.
               $result .= $unknown;
               // Back up and reprocess this byte; it may itself
@@ -133,26 +144,39 @@ function transliteration_process($string, $unknown = '?', $langcode = NULL) {
               continue 2;
             }
           }
-        } while(--$remaining);
+        } while (--$remaining);
 
         $n = ord($head);
-        if ($n <= 0xdf) { $ord = ($n-192)*64 + (ord($sequence{1})-128); }
-        else if ($n <= 0xef) { $ord = ($n-224)*4096 + (ord($sequence{1})-128)*64 + (ord($sequence{2})-128); }
-        else if ($n <= 0xf7) { $ord = ($n-240)*262144 + (ord($sequence{1})-128)*4096 + (ord($sequence{2})-128)*64 + (ord($sequence{3})-128); }
-        else if ($n <= 0xfb) { $ord = ($n-248)*16777216 + (ord($sequence{1})-128)*262144 + (ord($sequence{2})-128)*4096 + (ord($sequence{3})-128)*64 + (ord($sequence{4})-128); }
-        else if ($n <= 0xfd) { $ord = ($n-252)*1073741824 + (ord($sequence{1})-128)*16777216 + (ord($sequence{2})-128)*262144 + (ord($sequence{3})-128)*4096 + (ord($sequence{4})-128)*64 + (ord($sequence{5})-128); }
+        if ($n <= 0xdf) {
+          $ord = ($n - 192) * 64 + (ord($sequence{1}) - 128);
+        }
+        else if ($n <= 0xef) {
+          $ord = ($n - 224) * 4096 + (ord($sequence{1}) - 128) * 64 + (ord($sequence{2}) - 128);
+        }
+        else if ($n <= 0xf7) {
+          $ord = ($n - 240) * 262144 + (ord($sequence{1}) - 128) * 4096 + (ord($sequence{2}) - 128) * 64 + (ord($sequence{3}) - 128);
+        }
+        else if ($n <= 0xfb) {
+          $ord = ($n - 248) * 16777216 + (ord($sequence{1}) - 128) * 262144 + (ord($sequence{2}) - 128) * 4096 + (ord($sequence{3}) - 128) * 64 + (ord($sequence{4}) - 128);
+        }
+        else if ($n <= 0xfd) {
+          $ord = ($n - 252) * 1073741824 + (ord($sequence{1}) - 128) * 16777216 + (ord($sequence{2}) - 128) * 262144 + (ord($sequence{3}) - 128) * 4096 + (ord($sequence{4}) - 128) * 64 + (ord($sequence{5}) - 128);
+        }
         $result .= _transliteration_replace($ord, $unknown, $langcode);
         $head = '';
-      } elseif ($c < "\x80") {
+      }
+      elseif ($c < "\x80") {
         // ASCII byte.
         $result .= $c;
         $head = '';
-      } elseif ($c < "\xc0") {
+      }
+      elseif ($c < "\xc0") {
         // Illegal tail bytes.
         if ($head == '') {
           $result .= $unknown;
         }
-      } else {
+      }
+      else {
         // Miscellaneous freaks.
         $result .= $unknown;
         $head = '';
@@ -172,6 +196,7 @@ function transliteration_process($string, $unknown = '?', $langcode = NULL) {
  * @param string $langcode
  *   Optional ISO 639 language code used to import language specific
  *   replacements. Defaults to the current display language.
+ *
  * @return string
  *   Plain ASCII replacement character.
  * @see transliteration_get()
@@ -187,9 +212,9 @@ function _transliteration_replace($ord, $unknown = '?', $langcode = NULL) {
 
   // Check if we need to load a new bank
   if (!isset($template[$bank])) {
-    $file = drupal_get_path('module', 'transliteration') .'/data/'. sprintf('x%02x', $bank) .'.php';
+    $file = drupal_get_path('module', 'transliteration') . '/data/' . sprintf('x%02x', $bank) . '.php';
     if (file_exists($file)) {
-      $template[$bank] = include($file);
+      $template[$bank] = include ($file);
     }
     else {
       $template[$bank] = array('en' => array());
