@@ -23,12 +23,13 @@
  *   Optional ISO 639 language code used to import language specific
  *   replacements. See data/x00.php for an example. Defaults to the
  *   current display language.
+ *
  * @return string
  *   Plain ASCII output.
  * @see transliteration_process()
  */
 function transliteration_get($input, $unknown = '?', $langcode = NULL) {
-  require_once(drupal_get_path('module', 'transliteration') .'/transliteration.inc');
+  require_once (drupal_get_path('module', 'transliteration') . '/transliteration.inc');
   return transliteration_process($input, $unknown, $langcode);
 }
 
@@ -39,7 +40,7 @@ function transliteration_get($input, $unknown = '?', $langcode = NULL) {
  */
 function transliteration_init() {
   if (!empty($_FILES['files'])) {
-    require_once(drupal_get_path('module', 'transliteration') .'/transliteration.inc');
+    require_once (drupal_get_path('module', 'transliteration') . '/transliteration.inc');
 
     $langcode = NULL;
     if (!empty($_POST['language'])) {
